[gd_scene load_steps=8 format=3 uid="uid://bnclvys5v6p2r"]

[ext_resource type="Script" uid="uid://pchm6q7cbqu4" path="res://src/main.gd" id="1_jyhfs"]
[ext_resource type="Theme" uid="uid://bgme8nly0hf8l" path="res://assets/ui_theme.tres" id="1_o5qli"]
[ext_resource type="Script" uid="uid://wccp7oebeqpp" path="res://scenes/parking/parking_lot.gd" id="1_sugp2"]
[ext_resource type="Script" uid="uid://cn2ey08y1pamb" path="res://src/ui.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://desf7pwuqaba1" path="res://src/cam/camera_2d.gd" id="3_tbgi4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_o5qli"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbgi4"]
bg_color = Color(0.24477637, 0.2447764, 0.24477637, 1)

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_jyhfs")

[node name="NextCarTimer" type="Timer" parent="."]
process_mode = 1

[node name="QueueTimer" type="Timer" parent="."]
process_mode = 1

[node name="Objects" type="Node" parent="."]
process_mode = 1

[node name="Parking lot" type="Node2D" parent="." node_paths=PackedStringArray("car_spawn", "car_exit")]
process_mode = 3
script = ExtResource("1_sugp2")
car_spawn = NodePath("../CarSpawn")
car_exit = NodePath("../CarExit")
places_count = 4

[node name="CarSpawn" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="CarSpawn"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.14999986, 1)

[node name="CarExit" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="CarExit"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 1)

[node name="Camera2D" type="Camera2D" parent="."]
process_mode = 3
script = ExtResource("3_tbgi4")

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="UI" type="Control" parent="Camera2D/CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_o5qli")
script = ExtResource("2_0wfyh")

[node name="HBoxContainer" type="HBoxContainer" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33600003
anchor_right = 0.33600003
offset_left = -147.57202
offset_right = 185.92798
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/separation = 9
alignment = 1

[node name="Exit" type="Button" parent="Camera2D/CanvasLayer/UI/HBoxContainer"]
layout_mode = 2
text = "Выход"

[node name="Pause" type="Button" parent="Camera2D/CanvasLayer/UI/HBoxContainer"]
layout_mode = 2
disabled = true
text = "Пауза"

[node name="Start_Restart btn" type="Button" parent="Camera2D/CanvasLayer/UI/HBoxContainer"]
layout_mode = 2
text = "Начать симуляцию"

[node name="FPS" type="Label" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.777
anchor_right = 0.777
offset_left = -65.104004
offset_top = 11.0
offset_right = 36.895996
offset_bottom = 34.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "FPS:"
horizontal_alignment = 1

[node name="zoom" type="HSlider" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.102000006
anchor_right = 0.102000006
offset_left = -92.504005
offset_top = 10.0
offset_right = 101.495995
offset_bottom = 26.0
grow_horizontal = 2
min_value = 0.25
max_value = 1.0
step = 0.01
value = 1.0

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/UI/zoom"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.49500003
anchor_top = 0.87500006
anchor_right = 0.49500003
anchor_bottom = 0.87500006
offset_left = -58.030006
offset_right = 57.969994
offset_bottom = 23.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Приближение"

[node name="TimeScale" type="HSlider" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -4.0
offset_top = 12.0
offset_right = 184.0
offset_bottom = 28.0
grow_horizontal = 2
min_value = 1.0
max_value = 1000.0
step = 0.25
value = 1.0
editable = false
ticks_on_borders = true
ticks_position = 2

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/UI/TimeScale"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -85.0
offset_top = 5.0
offset_right = 85.0
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Скорость симуляции: 1x"

[node name="SimulationSettings" type="Control" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchor_top = 0.09900001
anchor_bottom = 1.0
offset_top = -0.15200806
offset_right = 279.0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6337567, 0.6337568, 0.6337567, 1)

[node name="ColorRect2" type="ColorRect" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.041
offset_bottom = 0.055999756
grow_horizontal = 2
grow_vertical = 2
color = Color(0.38549232, 0.38549256, 0.3854924, 1)

[node name="Label4" type="Label" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -92.0
offset_right = 92.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Настройки симуляции"

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.062000003
anchor_bottom = 0.062000003
offset_top = -11.208
offset_right = 138.0
offset_bottom = 11.792
text = "Количество мест"

[node name="PlacesSlider" type="HSlider" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.10300001
anchor_bottom = 0.10300001
offset_top = -8.152004
offset_right = 279.0
offset_bottom = 7.8479958
grow_horizontal = 2
grow_vertical = 2
min_value = 4.0
value = 4.0

[node name="Label2" type="Label" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.27100003
anchor_bottom = 0.27100003
offset_top = -62.264023
offset_right = 184.0
offset_bottom = -13.264023
text = " λ(t)
25 Машин / час"

[node name="lambda" type="HSlider" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.35300002
anchor_bottom = 0.35300002
offset_top = -46.152008
offset_right = 279.0
offset_bottom = -30.152008
grow_horizontal = 2
grow_vertical = 2
min_value = 1.0
value = 25.0

[node name="Label3" type="Label" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.27100003
anchor_bottom = 0.27100003
offset_top = 38.735977
offset_right = 185.0
offset_bottom = 87.73598
text = "Длительность стоянки"

[node name="VBoxContainer" type="VBoxContainer" parent="Camera2D/CanvasLayer/UI/SimulationSettings"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.615
anchor_right = 1.0
anchor_bottom = 0.615
offset_top = -137.16
offset_bottom = -13.160004
grow_horizontal = 2
grow_vertical = 2

[node name="CheckBox" type="CheckBox" parent="Camera2D/CanvasLayer/UI/SimulationSettings/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_o5qli")
text = "E1 «все примерно одинаково»"

[node name="CheckBox2" type="CheckBox" parent="Camera2D/CanvasLayer/UI/SimulationSettings/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_o5qli")
text = "E2 «много коротких, 
мало длинных»"

[node name="CheckBox3" type="CheckBox" parent="Camera2D/CanvasLayer/UI/SimulationSettings/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_o5qli")
text = "E3 «зависит от 
категории автомобиля»"

[node name="Metrics" type="Control" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -189.0
grow_horizontal = 0
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/UI/Metrics"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6337567, 0.6337568, 0.6337567, 1)

[node name="ColorRect2" type="ColorRect" parent="Camera2D/CanvasLayer/UI/Metrics"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.041
offset_bottom = 0.055999756
grow_horizontal = 2
grow_vertical = 2
color = Color(0.38549232, 0.38549256, 0.3854924, 1)

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/UI/Metrics"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_right = 36.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
text = "Метрики"

[node name="MetricsText" type="Label" parent="Camera2D/CanvasLayer/UI/Metrics"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.11800001
anchor_bottom = 0.11800001
offset_top = -24.464005
offset_right = 185.0
offset_bottom = 563.536
grow_vertical = 2
text = "Метрики появятся, когда вы начнете симуляцию"
autowrap_mode = 2

[node name="Button" type="Button" parent="Camera2D/CanvasLayer/UI/Metrics"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -74.5
offset_top = -71.0
offset_right = 74.5
offset_bottom = -31.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.86036915, 0.8603692, 0.8603692, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_tbgi4")
text = "Открыть папку с
логами"

[node name="EventLog" type="Control" parent="Camera2D/CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 330.0
offset_top = -145.0
offset_right = -330.0
grow_horizontal = 2
grow_vertical = 0

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer/UI/EventLog"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.6337567, 0.6337568, 0.6337567, 1)

[node name="ColorRect2" type="ColorRect" parent="Camera2D/CanvasLayer/UI/EventLog"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.16600001
offset_bottom = 1.9299984
grow_horizontal = 2
grow_vertical = 2
color = Color(0.38549232, 0.38549256, 0.3854924, 1)

[node name="Label" type="Label" parent="Camera2D/CanvasLayer/UI/EventLog/ColorRect2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_right = 36.5
offset_bottom = 23.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0)
text = "События"

[node name="ConsoleText" type="RichTextLabel" parent="Camera2D/CanvasLayer/UI/EventLog"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.20700002
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.015003
grow_horizontal = 2
grow_vertical = 2
